Fix: Dark mode: Color issue in top bar dropdwon - https://github.com/felixhahnweilheim/humhub-dark-mode/issues/71

--- a/themes/Clean/scss/humhub/_topbar.scss
+++ b/themes/Clean/scss/humhub/_topbar.scss
@@ -373,7 +373,7 @@
             }
 
             > ul > li > a {
-                background-color: var(--hh-text-color-contrast);
+                background-color: var(--hh-background-color-main);
                 color: var(--hh-text-color-highlight);
             }
 
